force-app/main/default/objects/Sampling_Detail_Display_Time__c/Sampling_Detail_Display_Time__c.object-meta.xml
<CustomObject>
    <label>Sampling Detail Display Time</label>
    <nameField>
        <displayFormat>SDDT{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Detail Display Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>