force-app/main/default/objects/Sampling_Detail_Display_Time__c/fields/Display_Time__c.field-meta.xml
<CustomField>
    <fullName>Display_Time__c</fullName>
    <label>Display Time</label>
    <type>DateTime</type>
</CustomField>