force-app/main/default/objects/Sampling_Detail_Display_Time__c/fields/Sampling_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Detail__c</fullName>
    <label>Sampling Detail</label>
    <referenceTo>Sampling_Detail__c</referenceTo>
    <relationshipLabel>Sampling Detail Display Time</relationshipLabel>
    <relationshipName>Sampling_Detail_Display_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>