force-app/main/default/objects/Sampling_Detail_Display_Time__c/fields/Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Time_Difference__c</fullName>
    <label>Time Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>